# validators/auth/loginSchema.js
@@ -1,8 +1,0 @@
-const joi = require("joi");
-
-const loginSchema = joi.object({
-  email: joi.string().required(),
-  password: joi.string().required(),
-});
-
-module.exports = { loginSchema };
